--- a/food_redistribution_app/pubspec.yaml
+++ b/food_redistribution_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   material_design_icons_flutter: ^7.0.7296
   google_fonts: ^6.2.1
+  intl: ^0.19.0
   
   # Navigation
   go_router: ^14.6.1
