--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^13.0.1
   google_maps_flutter: ^2.9.0
   geocoding: ^3.0.0
+  dart_geohash: ^2.0.0
   
   # Notifications
   flutter_local_notifications: ^18.0.1
