--- a/food_redistribution_app/.gitignore
+++ b/food_redistribution_app/.gitignore
@@ -1,45 +1,67 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart specific
 .dart_tool/
+.packages
+build/
+.flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-/coverage/
 
-# Symbolication related
-app.*.symbols
+# IDE - IntelliJ
+.idea/
+*.iml
+*.iws
 
-# Obfuscation related
-app.*.map.json
+# IDE - VSCode
+.vscode/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# System Files
+.DS_Store
+Thumbs.db
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase
+firebase-debug.log
+.firebase/
+serviceAccountKey.json
+
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# Testing
+coverage/
+
+# Production builds
+dist/
+out/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.log
+
+# Old project files (React/Node.js) - keep for reference but ignore
+frontend/
+backend/
+*.bat
+demo.html
+multi-user-demo.html
+INSTALL_*.md
+SETUP_GUIDE.md
+START_*.bat
+setup-*.bat
+install-*.bat
+
+# Keep Flutter app and important docs
+!food_redistribution_app/**
+!README.md
+!.gitignore
