--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,35 +5,35 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  # Firebase dependencies
+
+  # Firebase
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
   firebase_analytics: ^11.3.3
   firebase_messaging: ^15.1.3
-  
+
   # State management
   provider: ^6.1.2
-  
-  # UI and utilities
+
+  # UI
   cupertino_icons: ^1.0.6
   material_design_icons_flutter: ^7.0.7296
   google_fonts: ^6.2.1
-  
+
   # Navigation
   go_router: ^14.6.1
-  
-  # Forms and validation
-  flutter_form_builder: ^9.7.0
-  form_builder_validators: ^11.1.2
-  
-  # Location services
+
+  # Forms & validation (intl-safe)
+  flutter_form_builder: ^10.3.0+1
+  form_builder_validators: ^11.0.0
+
+  # Location
   geolocator: ^13.0.1
   google_maps_flutter: ^2.9.0
   geocoding: ^3.0.0
@@ -41,15 +41,14 @@ dependencies:
   
   # Notifications
   flutter_local_notifications: ^18.0.1
-  
-  # Security & Audit
+
+  # Security & device
   flutter_secure_storage: ^9.2.2
   crypto: ^3.0.5
   device_info_plus: ^10.1.2
-  
-  # HTTP requests and utilities
+
+  # Utilities
   http: ^1.2.2
-  intl: ^0.19.0
   uuid: ^4.5.1
   share_plus: ^10.1.1
   url_launcher: ^6.3.1
@@ -66,7 +65,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/icons/
+
+#   fonts:
+#     - family: Roboto
+#       fonts:
+#         - asset: fonts/Roboto-Regular.ttf
+#         - asset: fonts/Roboto-Bold.ttf
+#           weight: 700
