--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   file_picker: ^10.3.10
   firebase_storage: ^12.4.10
   flutter_image_compress: ^2.4.0
+  intl: any
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
