--- a/food_redistribution_app/firebase.json
+++ b/food_redistribution_app/firebase.json
@@ -1,18 +1,1 @@
-{
-    "functions": {
-        "source": "functions",
-        "ignore": [
-            "node_modules",
-            ".git",
-            "firebase-debug.log",
-            "firebase-debug.*.log"
-        ]
-    },
-    "firestore": {
-        "rules": "firestore.rules",
-        "indexes": "firestore.indexes.json"
-    },
-    "storage": {
-        "rules": "storage.rules"
-    }
-}
+{"functions":{"source":"functions","ignore":["node_modules",".git","firebase-debug.log","firebase-debug.*.log"]},"firestore":{"rules":"firestore.rules","indexes":"firestore.indexes.json"},"storage":{"rules":"storage.rules"},"flutter":{"platforms":{"android":{"default":{"projectId":"food-redistribution-plat-86785","appId":"1:185924884011:android:b4bfb376fbc84fb8313c6e","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"food-redistribution-plat-86785","configurations":{"android":"1:185924884011:android:b4bfb376fbc84fb8313c6e","ios":"1:185924884011:ios:3d1a4576739990ec313c6e","macos":"1:185924884011:ios:3d1a4576739990ec313c6e","web":"1:185924884011:web:184ea2c162490c34313c6e","windows":"1:185924884011:web:785e7d60ed457faf313c6e"}}}}}}
